some info improvements

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 # Stuff todo
 
-- ReadME
+- ReadME DONE
 - Round the icon as well
-- maybe add a shadow to the icon
+- maybe add a shadow to the icon 
 - format + split js into files
-- Dark Mode
+- Dark Mode DONE
